css/main.css
@charset "UTF-8";
/* CSS Document */

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
1.0 - Typography
	1.1 - Headings
	1.2 - Body Copy
	1.3 - Buttons
	1.4 - Forms
	1.5 - Lists
	1.6 - Tables
2.0 - Navigation Menus
	3.1 - Main Menu
	3.2 - Sub Menu
	3.3 - Footer Menu
3.0 - Content
	3.1 - Site Structure
	3.2 - Section Name
	3.3 - Section Name
4.0 - Media
5.0 - Utility
	5.1 - Background Colors
	5.2 - Text Colors
	5.3 - Text Sizes
	5.4 - Alignments
--------------------------------------------------------------*/


/*--------------------------------------------------------------
1.0 - TYPOGRAPHY
-------------------------------------------------------------- */
html {
	font-size: 14px;
}
body {
	font-family: 'Open Sans', sans-serif;
	color: white;
}
/*--------------------------------------------------------------
1.1 - BODY
-------------------------------------------------------------- */
.lead {
	font-weight: 500;
	font-size: 1.2rem;
}

.lead span {
	color:#77cae6;
	font-weight: 800;
}

/*--------------------------------------------------------------
1.2 - HEADINGS
-------------------------------------------------------------- */
h1 {
    font-size: 5.5rem;
    background-color: rgba(255,255,255,.5);
    line-height: 5rem;
    text-align: center;
    padding: 20px;
}

h2 {
	font-size: 3rem;
	font-weight: 100;
}

h3 {
	font-weight: 300;
	font-size: 2rem;
}
h4 {
	margin-bottom: 0;
}

/*--------------------------------------------------------------
1.4 - FORMS
-------------------------------------------------------------- */
form {
	padding-left:20px;
}
form div {
	padding: 10px;
}
form .col-1 {
	padding-right: 2rem !important;
}
label {
	display:none;
}
input, textarea {
	background-color: #19896e;
	width: 100%;
	padding: 10px;
	border:1px solid #19896e;
}
input:focus, textarea:focus {
	outline:none;
	border:1px solid #115e4b;
}
::-webkit-input-placeholder {
   color: white;
}

:-moz-placeholder { /* Firefox 18- */
   color: white;  
}

::-moz-placeholder {  /* Firefox 19+ */
   color: white;  
}

:-ms-input-placeholder {  
   color: white;  
}
form a {
	margin-top: 20px;
	padding:10px 20px;
	background-color: #146c57;
	text-transform: uppercase;
	color: white;
	text-decoration: none;
	display:inline-block;
	font-weight: 600;
}

form a:hover {
	color: #146c57;
	background-color: white;
	
}
/*--------------------------------------------------------------
1.5 - LISTS
-------------------------------------------------------------- */
dt, dd {
	display: inline-block
}
dt {
	font-weight:100;
	width: 20px;
}
dd {
	font-weight: 600;
}
/*--------------------------------------------------------------
2.0 - MAIN MENU
-------------------------------------------------------------- */

nav {
	text-align: right;
}

nav li  {
	display:inline-block;
	list-style: none;
	padding: 0 20px;
    font-weight: 700;
}

nav a {
	color: white;
	text-decoration: none;
	padding:10px;
}

nav a:hover {
	background-color: rgba(255,255,255,.5);
}



/*--------------------------------------------------------------
3.0 - SITE STRUCTURE
-------------------------------------------------------------- */
*, *:after, *:before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border;
	box-sizing: border-box;
}

.wrapper {
	width: 80%; /*original width was 1170px*/
	margin: 0 auto;
}

.row:after {
	content: " ";
	display: table;
	clear: both;
}

img {
	max-width: 100%;
}

figure {
	-webkit-margin-before: 0;
    -webkit-margin-after: 0;
    -webkit-margin-start: 0;
    -webkit-margin-end: 0;
	margin-right: 20px;
}

[class*="col-"] {
	float: left;
	padding: 0 2rem 2rem 0;
}

[class*="col-"]:last-of-type {
	float: left;
	padding-right: 0;
}

/*--------------------------------------------------------------
3.1 - SINGLE COLUMNS
-------------------------------------------------------------- */
.col-1 {
	width: 100%;
}

.col-1-2 {
	width: 50%;
}

.col-1-3 {
	width: 33.33%;
	padding: 1rem 0;
}

.col-1-4 {
	width: 25%;
	padding-bottom: 0;
}

.col-1-5 {
	width: 20%;
}

.col-1-6 {
	width: 16.66%;
}

.col-1-7 {
	width: 14.28%
}

.col-1-8 {
	width: 12.5%;
}

.col-1-9 {
	width: 11.11%;
}

.col-1-10 {
	width: 10%;
}

.col-1-11 {
	width: 9.09%;
}

.col-1-12 {
	width: 8.33%;
}
/*--------------------------------------------------------------
3.2 - PARTIAL COLUMNS
-------------------------------------------------------------- */

.col-2-3 {
	width: 66.66%;
}

.col-3-4 {
	width: 75%;
}

.col-2-5 {
	text-align: left;
	width: 40%;
}

.col-3-5 {
	width: 60%;
}

.col-2-6 {
	width: 16.66%;
}

.col-4-6 {
	width: 83.33%;
}

.col-3-7 {
	width: 14.28%;
}

.col-4-7 {
	width: 85.7%;
}

.col-3-8 {
	width: 37.5%;
}

.col-5-8 {
	width: 62.5%;
}

.col-3-9 {
	width: 11.11%;
}

.col-6-9 {
	width: 88.88%; 
}

.col-4-10 {
	width: 40%;
}

.col-6-10 {
	width: 60%;
}

.col-9-11 {
	width: 81.81%;
}

.col-2-11 {
	width: 18.18%;
}

.col-3-12 {
	width: 8.33%;
}

.col-9-12 {
	width: 91.67%;
}
/*--------------------------------------------------------------
3.3 - SECTIONS
-------------------------------------------------------------- */
/*-- Services -- */
#services section div {
	background-color: #1c7897;
	padding:20px 10px;
}

/*--------------------------------------------------------------
4.0 - MEDIA
-------------------------------------------------------------- */

#hero { 
  background: url(../img/hero.jpeg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#map {
	height: 200px;
	margin-top:100px;
}

/*--------------------------------------------------------------
5.0 - UTILITY
-------------------------------------------------------------- */

/*--------------------------------------------------------------
5.1 - BG COLORS
-------------------------------------------------------------- */
#services {
	background-color:#218FB4;
}
#contact {
	background-color:#21b490;
}
/*--------------------------------------------------------------
5.2 - TXT UTILITY
-------------------------------------------------------------- */
.txt-uppercase {
	text-transform:uppercase;
}
.txt-center {
	text-align: center;
}
/*--------------------------------------------------------------
5.3 - SPACING
-------------------------------------------------------------- */
.p-t-sm {
	padding-top: 10px;
}
.p-t-md {
	padding-top: 20px;
}
.p-t-lg {
	padding-top: 50px;
}
.p-b-lg {
	padding-bottom: 50px;
}
.p-b-xl {
	padding-bottom: 100px;
}
.m-t-0 {
	margin-top: 0;
}
.m-b-lg {
	margin-bottom: 50px;
}
/*--------------------------------------------------------------
5.4 - ALIGNMENTS
-------------------------------------------------------------- */

.center-block {
	margin: 0 auto;
	float: none !important;
}

.push-right {
	float: right !important;
}






@media screen and (max-width: 768px) {
	
	
}

